test/fail/block-nested-return.grace
method name {
  object {
    method inner {
      { return }
    }
  }
}

name.inner.apply
